feat: register user

--- a/audit/src/main/resources/application.yaml
+++ b/audit/src/main/resources/application.yaml
@@ -1,3 +1,21 @@
 spring:
   application:
-    name: audit
+    name: audit-hub
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/auditHubDB
+    username: root
+    password: root
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
+  flyway:
+    enabled: true
+    baseline-on-migrate: true
